src/tests/errors/lexing/test08.cmp
program main 
begin
    proc x() 
    begin 
       proc := 1  /* keyword != identifier */
    end 
end 